# loanpro-code-challenge-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: build_and_deploy.yml
calculator/: __init__.py  models.py
calculator/migrations/: 0001_initial.py  0002_alter_operation_type.py  0003_seed_operations.py  0004_record.py  0005_userprofile.py  0006_record_deleted_at_alter_userprofile_balance.py  0007_operation_name.py  0008_populate_operations_and_user.py  0009_update_operations_name.py  0010_seed_user_no_balance.py
calculator/models/: __init__.py  operation.py  record.py  user_profile.py
calculator/tests/: test_signals.py
calculator/tests/models/: test_operation.py  test_record.py  test_user_profile.py
calculator/tests/utils/: test_random_utils.py
calculator/tests/views/: test_record_create.py  test_record_delete.py  test_record_entry_point.py  test_record_list.py
calculator/utils/: __init__.py  random_utils.py
calculator/views/: __init__.py  record.py
codechallenge/: asgi.py  settings.py  urls.py  views.py  wsgi.py
codechallenge/api/v1/: urls.py
codechallenge/authentication/: middleware.py
codechallenge/tests/: test_auth.py  test_operation.py
codechallenge/views/: __init__.py  auth.py  operation.py
