[tool.poetry]
name = "codechallenge"
version = "0.1.0"
description = "REST API using django framework"
authors = ["Isaac Zepeda <417939+keogh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pyjwt = "^2.8.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
